[gd_scene load_steps=5 format=3 uid="uid://dyflg822iu22c"]

[ext_resource type="Script" path="res://UI/Credits/dev_card.gd" id="1_c3hqm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8r8sb"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_kx0v8"]
size = Vector2(100, 100)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_joobl"]

[node name="DevCard" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_c3hqm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PictureTexture" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
z_index = 1
material = SubResource("ShaderMaterial_8r8sb")
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3
texture = SubResource("PlaceholderTexture2D_kx0v8")
expand_mode = 1
stretch_mode = 4

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
z_index = 1
layout_mode = 2
text = ">DevName"
autowrap_mode = 3

[node name="Button" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_joobl")
expand_icon = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
